Add all functionality of likes, views comments. Need kafka. Need tests. Need test from cli
